terraform/modules/network/main.tf
# main.tf - Network module main configuration

terraform {
  required_version = ">= 1.5.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.0"
    }
  }
}

provider "aws" {
  region = var.region

  default_tags {
    tags = merge(
      {
        Project     = var.project
        Environment = var.environment
        ManagedBy   = "Terraform"
        Module      = "network"
      },
      var.tags
    )
  }
}


locals {
  name_prefix = "${var.project}-${var.environment}"

  base_tags = {
    Project     = var.project
    Environment = var.environment
    ManagedBy   = "Terraform"
  }
}


############################################################
# VPC
############################################################

resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_hostnames = true
  enable_dns_support   = true


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-vpc"
    }
  )
}


############################################################
# Internet Gateway
############################################################

resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-igw"
    }
  )
}


############################################################
# Public Subnets
############################################################

resource "aws_subnet" "public" {

  count = length(var.public_subnet_cidrs)


  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-public-subnet-${count.index + 1}"
      Tier = "public"
    }
  )
}


############################################################
# Private Subnets
############################################################

resource "aws_subnet" "private" {

  count = length(var.private_subnet_cidrs)


  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-private-subnet-${count.index + 1}"
      Tier = "private"
    }
  )
}


############################################################
# NAT Gateway
############################################################

resource "aws_eip" "nat" {

  count = var.enable_nat_gateway ? 1 : 0


  domain = "vpc"


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-nat-eip"
    }
  )
}



resource "aws_nat_gateway" "main" {

  count = var.enable_nat_gateway ? 1 : 0


  allocation_id = aws_eip.nat[0].id

  subnet_id = aws_subnet.public[0].id


  depends_on = [
    aws_internet_gateway.main
  ]


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-nat-gateway"
    }
  )
}


############################################################
# Public Route Table
############################################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id
  }


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-public-route-table"
    }
  )
}



resource "aws_route_table_association" "public" {

  count = length(aws_subnet.public)


  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id
}



############################################################
# Private Route Table
############################################################

resource "aws_route_table" "private" {

  count = var.enable_nat_gateway ? 1 : 0


  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.main[0].id
  }


  tags = merge(
    local.base_tags,
    {
      Name = "${local.name_prefix}-private-route-table"
    }
  )
}



resource "aws_route_table_association" "private" {

  count = var.enable_nat_gateway ? length(aws_subnet.private) : 0


  subnet_id = aws_subnet.private[count.index].id


  route_table_id = aws_route_table.private[0].id
}
